--- a/index.html
+++ b/index.html
@@ -10,54 +10,50 @@
 <p><strong>Last updated:</strong> 17/01/2026</p>
 
 <p>
-MBBS Freaks (“we,” “our,” “us”) operates the MBBS Freaks mobile application (the “App”). 
-This Privacy Policy explains how we collect, use, and safeguard your information when you use our App. 
-By using MBBS Freaks, you agree to the terms of this Privacy Policy.
+MBBS Freaks (“we,” “our,” or “us”) operates the MBBS Freaks mobile application (the “App”).
+This Privacy Policy explains how we collect, use, and protect your information when you use the App.
 </p>
 
 <h2>Information We Collect</h2>
 <ul>
-    <li><strong>Personal Information:</strong> Name, email address, and login credentials (via Firebase Authentication).</li>
-    <li><strong>Educational Data:</strong> Notes, quizzes, and subjects you access or purchase.</li>
-    <li><strong>Payment Information:</strong> Payments are processed securely through third-party providers (e.g., Razorpay). We do not store your credit/debit card details.</li>
-    <li><strong>Device Information:</strong> Device model, operating system, and crash reports.</li>
+    <li><strong>Personal Information:</strong> Name, email address, and login credentials used to create and manage your account.</li>
+    <li><strong>Usage Information:</strong> Information about how you interact with the app, such as accessed content and app activity.</li>
+    <li><strong>Device Information:</strong> Device model, operating system version, and crash reports for performance and stability improvements.</li>
 </ul>
 
 <h2>How We Use Your Information</h2>
 <ul>
-    <li>Provide access to study materials, notes, and quizzes.</li>
-    <li>Manage user authentication and account security.</li>
-    <li>Process payments for premium features.</li>
-    <li>Improve app performance and user experience.</li>
-    <li>Send important updates and notifications.</li>
+    <li>Create and manage user accounts</li>
+    <li>Provide access to educational content associated with your account</li>
+    <li>Maintain app security and functionality</li>
+    <li>Improve app performance and user experience</li>
+    <li>Send important app-related updates</li>
 </ul>
 
-<h2>Data Sharing and Disclosure</h2>
+<h2>Third-Party Services</h2>
 <ul>
-    <li>Firebase (Google): For authentication, storage, and analytics.</li>
-    <li>Payment Providers (e.g., Razorpay): For processing secure payments.</li>
-    <li>Legal Authorities: If required by law.</li>
+    <li>Firebase (Google): Used for authentication, backend services, and crash reporting</li>
+    <li>Apple Sign-In / Google Sign-In: Used for user authentication where applicable</li>
 </ul>
 
 <h2>Data Security</h2>
 <p>
-We implement strong security measures to protect your data. However, no system is 100% secure.
+We store user data securely and take reasonable measures to protect it against unauthorized access, alteration, or disclosure.
+</p>
+
+<h2>Account Deletion & Data Removal</h2>
+<p>
+Users can permanently delete their account and associated personal data directly within the app by navigating to
+<strong>Profile → Delete Account</strong>. Once deleted, the account and related data cannot be recovered.
 </p>
 
 <h2>Children’s Privacy</h2>
 <p>
-We do not knowingly collect data from children under 13.
+The App is intended for users aged 13 and above. We do not knowingly collect personal information from children under the age of 13.
 </p>
 
-<h2>Your Rights</h2>
-<ul>
-    <li>Update or delete your account anytime via the app.</li>
-    <li>Request data deletion by contacting us.</li>
-    <li>Opt out of promotional communications.</li>
-</ul>
-
 <h2>Contact Us</h2>
-<p>Email: shivakumarsomavarapu@gmail.com</p>
+<p>Email: <strong>mbbsfreaks@gmail.com</strong></p>
 <p>Location: Hyderabad, Telangana, India</p>
 
 </body>
